--- a/public_html/assets/index.html
+++ b/public_html/assets/index.html
@@ -6,31 +6,30 @@
 </head>
 <body>
 
-<div id="header">
+<div class="header">
 <h1>THORNE & SPINDLE DOT COM</h1>
 </div>
 
-<div id="logo">
-	<h1 id="title"> THORNE & SPINDLE </h1>
+<div class="logo">
+	<h1 class="title"> THORNE & SPINDLE </h1>
 </div>
 
 	
 	
-<div id="nav">
+<div class="nav">
 <a href="home.html">Home</a><br>
 <a href="top.html">Tops</a><br>
 <a href="bottom.html">Bottoms</a><br>
 <a href="accessories.html">Accessories</a><br>
 </div>
 
-<div id="section">
-<h2></h2>
+<div class="section">
 <p>You have reached the home page of Thorne & Spindle. Use the navigation bar to your left
  and select which category you would like to shop in!</p>
 
 </div>
 
-<div id="footer">
+<div class="footer">
 Copyright © W3Schools.com << to change
 </div>
 
