--- a/public_html/assets/index.html
+++ b/public_html/assets/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>T&S</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<STYLE TYPE="text/css"> <!-- P {text-indent: 30pt;} --> </STYLE>
 </head>
 <body>
 
@@ -24,8 +25,9 @@
 </div>
 
 <div class="section">
-<p>You have reached the home page of Thorne & Spindle. Use the navigation bar to your left
- and select which category you would like to shop in!</p>
+<P>You have reached the home page of Thorne & Spindle. Use the navigation bar to your left
+ and select which category you would like to shop in!
+ <!-- hehe --->
 
 </div>
 
