hipster splash image is online

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,1 +1,21 @@
-Hello Andromeda-10 : From neerajk
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<style>
+
+			img {
+				display: block;
+				margin: 0 auto;
+				max-width: 100%;
+				height: auto;
+
+			}
+		
+		</style>
+	</head>
+	<body>
+		<img src="assets/images/pic.jpg" width="700" height="auto" align="middle">
+
+	</body>
+</html>
