wrapped in div class 'content' and moved style to style.css

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,20 +2,11 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<style>
-
-			img {
-				display: block;
-				margin: 0 auto;
-				max-width: 100%;
-				height: auto;
-
-			}
-		
-		</style>
+		<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 	</head>
 	<body>
-		<img src="assets/images/pic.jpg" width="700" height="auto" align="middle">
-
+		<div class="content">
+			<img class="splash" src="assets/images/pic.jpg" width="700" height="auto" align="middle">
+		</div>
 	</body>
 </html>
