--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,50 +1,69 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+		<link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'>
+
+		<title>T H O R N E & S P I N D L E</title>
 	</head>
 	<body>
 		<div class="content">
 			<img class="splash" src="assets/images/pic.jpg" width="700" height="auto" align="middle">
 		</div>
-	</body>
 
-	<div class="footer" style="margin-top:100px">
-	<p>Copyright  2016 - TNS. All Rights Reserved. Photos probably used by permission.</p>
-	<p>"Thorne & Spindle changed my life! How can I get frequent product updates?!"</p>
-	<table style="width:100%">
-		<tr>
-			<td>Site</td>
-			<td>About</td>
-			<td>Connect</td>
-		</tr>
-		<tr>
-			<td>
-				<ul align="center">
-					<li><a class="footer" href="link1.html">Link1</a></li>
-					<li><a class="footer" href="link2.html">Link2</a></li>
-				</ul>
-			</td>
-			<td>
-				<ul>
-					<li>test</li>
-				</ul>
-			</td>
-			<td>
-				<ul align="center">
-					<li><a href="https://twitter.com/justinbieber">
-		<img src="assets/images/twitter.png" style="margin-left:10px" width="20" height="auto">
-			</a></li>
-					<li><a href="https://www.facebook.com/hmtheus">
-		<img src="assets/images/facebook.png" style="margin-left:10px" width="20" height="auto">
-			</a></li>
-					<li><a href="http://i.imgur.com/E7gjfgu.png?1">
-		<img src="assets/images/instagram.jpg" style="margin-left:10px" width="20" height="auto">
-			</a></li>
-				</ul>
-			</td>
-		</tr>
+		<footer>
+			<div class="footer">
+				<div class="row">
+					<div class="third">
+						hello world
+					</div>
+					<div class="third">
+						hello world
+					</div>
+					<div class="third">
+						hello world
+					</div>
+				</div>
+
+			</div>
+		</footer>
+
+		<div class="footer" style="margin-top:100px">
+		<p>Copyright  2016 - TNS. All Rights Reserved. Photos probably used by permission.</p>
+		<p>"Thorne & Spindle changed my life! How can I get frequent product updates?!"</p>
+		<table style="width:100%">
+			<tr>
+				<td>Site</td>
+				<td>About</td>
+				<td>Connect</td>
+			</tr>
+			<tr>
+				<td>
+					<ul align="center">
+						<li><a class="footer" href="link1.html">Link1</a></li>
+						<li><a class="footer" href="link2.html">Link2</a></li>
+					</ul>
+				</td>
+				<td>
+					<ul>
+						<li>test</li>
+					</ul>
+				</td>
+				<td>
+					<ul align="center">
+						<li><a href="https://twitter.com/justinbieber">
+			<img src="assets/images/twitter.png" style="margin-left:10px" width="20" height="auto">
+				</a></li>
+						<li><a href="https://www.facebook.com/hmtheus">
+			<img src="assets/images/facebook.png" style="margin-left:10px" width="20" height="auto">
+				</a></li>
+						<li><a href="http://i.imgur.com/E7gjfgu.png?1">
+			<img src="assets/images/instagram.jpg" style="margin-left:10px" width="20" height="auto">
+				</a></li>
+					</ul>
+				</td>
+			</tr>
 <!-- Removed
 	<ul>Follow us here and give us some love!
 	<a href="https://twitter.com/justinbieber">
@@ -58,5 +77,6 @@
 			</a>
 	</ul>
 --->
-	</div>
+		</div>
+	<body>
 </html>
