--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,70 +13,43 @@
 		</div>
 
 		<footer>
-			<div class="footer">
+			<div class="footer" style="margin-top:100px">
+			<p>Copyright  2016 - TNS. All Rights Reserved</p>
 				<div class="row">
 					<div class="third">
-						hello world
+						Customer Service
+						<div><a href="comingsoon.html">Frequently Asked Questions</a></div>
+						<div><a href="comingsoon.html">Returns</a></div>
+						<div><a href="comingsoon.html">Live Chat</a></div>
+						<div><a href="comingsoon.html">Track Orders</a></div>
+						<div><a href="contact.html">Contact Us</a></div>
 					</div>
 					<div class="third">
-						hello world
+						Company Info
+						<div><a href="about.html">About Us</a></div>
+						<div><a href="comingsoon.html">Complain about Us</a></div>
 					</div>
 					<div class="third">
-						hello world
+						Connect
+						<div>
+							<a href="https://twitter.com/justinbieber">
+								<img src="assets/images/twitter.png" width="20" height="auto">
+							</a>
+						</div>
+						<div>
+							<a href="https://www.facebook.com/zuck">
+								<img src="assets/images/facebook.png" width="20" height="auto">
+							</a>
+						</div>
+						<div>
+							<a href="https://www.instagram.com/kang_gary8888/">
+								<img src="assets/images/instagram.png" width="20" height="auto">
+							</a>
+						</div>
 					</div>
 				</div>
 
 			</div>
 		</footer>
-
-		<div class="footer" style="margin-top:100px">
-		<p>Copyright  2016 - TNS. All Rights Reserved. Photos probably used by permission.</p>
-		<p>"Thorne & Spindle changed my life! How can I get frequent product updates?!"</p>
-		<table style="width:100%">
-			<tr>
-				<td>Site</td>
-				<td>About</td>
-				<td>Connect</td>
-			</tr>
-			<tr>
-				<td>
-					<ul align="center">
-						<li><a class="footer" href="link1.html">Link1</a></li>
-						<li><a class="footer" href="link2.html">Link2</a></li>
-					</ul>
-				</td>
-				<td>
-					<ul>
-						<li>test</li>
-					</ul>
-				</td>
-				<td>
-					<ul align="center">
-						<li><a href="https://twitter.com/justinbieber">
-			<img src="assets/images/twitter.png" style="margin-left:10px" width="20" height="auto">
-				</a></li>
-						<li><a href="https://www.facebook.com/hmtheus">
-			<img src="assets/images/facebook.png" style="margin-left:10px" width="20" height="auto">
-				</a></li>
-						<li><a href="http://i.imgur.com/E7gjfgu.png?1">
-			<img src="assets/images/instagram.jpg" style="margin-left:10px" width="20" height="auto">
-				</a></li>
-					</ul>
-				</td>
-			</tr>
-<!-- Removed
-	<ul>Follow us here and give us some love!
-	<a href="https://twitter.com/justinbieber">
-		<img src="assets/images/twitter.png" style="margin-left:10px" width="20" height="auto">
-			</a>
-	<a href="https://www.facebook.com/hmtheus">
-		<img src="assets/images/facebook.png" style="margin-left:10px" width="20" height="auto">
-			</a>
-	<a href="http://i.imgur.com/E7gjfgu.png?1">
-		<img src="assets/images/instagram.jpg" style="margin-left:10px" width="20" height="auto">
-			</a>
-	</ul>
---->
-		</div>
 	<body>
 </html>
