closing tags on img

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,7 +9,19 @@
 	</head>
 	<body>
 		<div class="content">
-			<img class="splash" src="assets/images/pic.jpg" width="700" height="auto" align="middle">
+			<img class="splash" src="assets/images/pic.jpg" width="700" height="auto" align="middle"/>
+		</div><!DOCTYPE html>
+<html>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+		<link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'>
+
+		<title>T H O R N E & S P I N D L E</title>
+	</head>
+	<body>
+		<div class="content">
+			<img class="splash" src="assets/images/pic.jpg" width="700" height="auto" align="middle"/>
 		</div>
 
 		<footer>
@@ -33,17 +45,17 @@
 						Connect
 						<div>
 							<a href="https://twitter.com/justinbieber">
-								<img src="assets/images/twitter.png" width="20" height="auto">
+								<img src="assets/images/twitter.png" width="20" height="auto"/>
 							</a>
 						</div>
 						<div>
 							<a href="https://www.facebook.com/zuck">
-								<img src="assets/images/facebook.png" width="20" height="auto">
+								<img src="assets/images/facebook.png" width="20" height="auto"/>
 							</a>
 						</div>
 						<div>
 							<a href="https://www.instagram.com/kang_gary8888/">
-								<img src="assets/images/instagram.png" width="20" height="auto">
+								<img src="assets/images/instagram.png" width="20" height="auto"/>
 							</a>
 						</div>
 					</div>
