--- a/public_html/template.html
+++ b/public_html/template.html
@@ -21,18 +21,13 @@
          * fires when body is loaded
          */
         function onLoad() {
-            console.log("loaded");
             // load templates
             templates();
 
             // load cart
-            //cart = Cart;
+            cart = Cart;
             // get cart from cookies
-
-            cart.asdf = function() {
-                console.log("adsf");
-            }
-            //cart.get();
+            cart.get();
         }
         </script>
 
