TS-10 added comments

--- a/public_html/template.html
+++ b/public_html/template.html
@@ -8,7 +8,6 @@
         <script src="/assets/js/templates.js"></script>
         <script src="/assets/js/cart.js"></script>
         <sciprt src="/assets/js/products.json"></sciprt>
-
         <script>
         /**
          * cart object, initalized as an empty object
@@ -38,13 +37,19 @@
     <body onLoad="onLoad()">
         <div class="template" include="/templates/header.html"></div>
         
-        <div class="content">
-            <!-- write stuff in here -->
+        <div class="row">
 
+            <!-- write stuff in here -->
+            <!-- also remember to change the title to your page -->
 
 
             <h1>content goes here</h1>
             <button onclick="cart.asdf()">asdf</button>
+
+
+            <!-- end write stuff here -->
+
+
         </div>
 
         <div class="template" include="/templates/footer.html"></div>
