--- a/public_html/men/bottoms/index.html
+++ b/public_html/men/bottoms/index.html
@@ -31,7 +31,7 @@
         </script>
 
         <!-- edit the title -->
-        <title>T H O R N E & S P I N D L E | Mens</title>
+        <title>T H O R N E & S P I N D L E | Mens's Bottoms</title>
 
     </head>
     <body onLoad="onLoad()">
@@ -44,24 +44,19 @@
 
 			<div class="sidebar">
 			
-				<a href="/women.html"> <h1>Women</h1> </a>
-				<a href="/women/tops.html">
-					<h4 style="color: #5E9DC8">Tops</h4> </a>
-				<a href="/women/bottoms.html">
-					<h4>Bottoms</h4> </a>
-				<a href="/women/dresses.html">
-					<h4>Dresses</h4> </a>
+				<a href="/men"> <h1>Men</h1> </a>
+				<a href="/men/tops">
+					<h4>Tops</h4> </a>
+				<a href="/men/bottoms">
+					<h4 style="color: #5E9DC8">Bottoms</h4> </a>
 			</div>
 			<div class="main-page">
-				<img src="/assets/images/facebook.png" width="150" height="auto"/>
-				<p>Facebook Shirt</p>
+				<img src="/assets/images/instagram.png" width="150" height="auto"/>
+				<p>Instagram Pants</p>
 				<p>$15.00</p>
 			</div>
 			<div class="main-page">
-				<!-- stuff here -->
-			</div>
-			<div class="main-page">
-				<!-- stuff here -->
+				<!-- next row here -->
 			</div>
 		</div>
 
