--- a/public_html/men/index.html
+++ b/public_html/men/index.html
@@ -31,7 +31,7 @@
         </script>
 
         <!-- edit the title -->
-        <title>T H O R N E & S P I N D L E | Mens's Bottoms</title>
+        <title>T H O R N E & S P I N D L E | Mens</title>
 
     </head>
     <body onLoad="onLoad()">
@@ -44,19 +44,21 @@
 
 			<div class="sidebar">
 			
-				<a href="/men.html"> <h1>Men</h1> </a>
-				<a href="tops.html">
+				<a href="/men"> <h1 style="color: #5E9DC8">Men</h1> </a>
+				<a href="/men/tops">
 					<h4>Tops</h4> </a>
-				<a href="bottoms.html">
-					<h4 style="color: #5E9DC8">Bottoms</h4> </a>
+				<a href="/men/bottoms">
+					<h4>Bottoms</h4> </a>
+			</div>
+			<div class="main-page">
+				<img src="/assets/images/facebook.png" width="150" height="auto"/>
+				<p>Facebook Shirt</p>
+				<p>$15.00</p>
 			</div>
 			<div class="main-page">
 				<img src="/assets/images/instagram.png" width="150" height="auto"/>
 				<p>Instagram Pants</p>
 				<p>$15.00</p>
-			</div>
-			<div class="main-page">
-				<!-- next row here -->
 			</div>
 		</div>
 
