--- a/public_html/men/tops/index.html
+++ b/public_html/men/tops/index.html
@@ -44,10 +44,10 @@
 
 			<div class="sidebar">
 			
-				<a href="/men.html"> <h1>Men</h1> </a>
-				<a href="tops.html">
+				<a href="/men"> <h1>Men</h1> </a>
+				<a href="/men/tops">
 					<h4 style="color: #5E9DC8">Tops</h4> </a>
-				<a href="bottoms.html">
+				<a href="/men/bottoms">
 					<h4>Bottoms</h4> </a>
 			</div>
 			<div class="main-page">
