--- a/public_html/women/bottoms/index.html
+++ b/public_html/women/bottoms/index.html
@@ -44,24 +44,24 @@
 
 			<div class="sidebar">
 			
-				<a href="/women.html"> <h1>Women</h1> </a>
-				<a href="/women/tops.html">
+				<a href="/women"> <h1>Women</h1> </a>
+				<a href="/women/tops">
 					<h4>Tops</h4> </a>
-				<a href="/women/bottoms.html">
-					<h4>Bottoms</h4> </a>
-				<a href="/women/dresses.html">
-					<h4 style="color: #5E9DC8">Dresses</h4> </a>
+				<a href="/women/bottoms">
+					<h4 style="color: #5E9DC8">Bottoms</h4> </a>
+				<a href="/women/dresses">
+					<h4>Dresses</h4> </a>
 			</div>
 			<div class="main-page">
-				<!-- stuff here -->
-			</div>
-			<div class="main-page">
-				<!-- stuff here -->
-			</div>
-			<div class="main-page">
-				<img src="/assets/images/kevinAvatar.png" width="150" height="auto"/>
-				<p>kevinAvatar Dress</p>
+				<img src="/assets/images/instagram.png" width="150" height="auto"/>
+				<p>Instagram Pants</p>
 				<p>$15.00</p>
+			</div>
+			<div class="main-page">
+				<!-- Stuff here -->
+			</div>
+			<div class="main-page">
+				<!-- Stuff here -->
 			</div>
 		</div>
 
