--- a/public_html/women/dresses/index.html
+++ b/public_html/women/dresses/index.html
@@ -44,23 +44,19 @@
 
 			<div class="sidebar">
 			
-				<a href="/women.html"> <h1 style="color: #5E9DC8">Women</h1> </a>
-				<a href="/women/tops.html">
+				<a href="/women"> <h1>Women</h1> </a>
+				<a href="/women/tops">
 					<h4>Tops</h4> </a>
-				<a href="/women/bottoms.html">
+				<a href="/women/bottoms">
 					<h4>Bottoms</h4> </a>
-				<a href="/women/dresses.html">
-					<h4>Dresses</h4> </a>
+				<a href="/women/dresses">
+					<h4 style="color: #5E9DC8">Dresses</h4> </a>
 			</div>
 			<div class="main-page">
-				<img src="/assets/images/facebook.png" width="150" height="auto"/>
-				<p>Facebook Shirt</p>
-				<p>$15.00</p>
+				<!-- stuff here -->
 			</div>
 			<div class="main-page">
-				<img src="/assets/images/instagram.png" width="150" height="auto"/>
-				<p>Instagram Pants</p>
-				<p>$15.00</p>
+				<!-- stuff here -->
 			</div>
 			<div class="main-page">
 				<img src="/assets/images/kevinAvatar.png" width="150" height="auto"/>
