--- a/public_html/women/index.html
+++ b/public_html/women/index.html
@@ -44,11 +44,13 @@
 
 			<div class="sidebar">
 			
-				<a href="/men.html"> <h1 style="color: #5E9DC8">Men</h1> </a>
-				<a href="men/tops.html">
+				<a href="/women"> <h1 style="color: #5E9DC8">Women</h1> </a>
+				<a href="/women/tops">
 					<h4>Tops</h4> </a>
-				<a href="men/bottoms.html">
+				<a href="/women/bottoms">
 					<h4>Bottoms</h4> </a>
+				<a href="/women/dresses">
+					<h4>Dresses</h4> </a>
 			</div>
 			<div class="main-page">
 				<img src="/assets/images/facebook.png" width="150" height="auto"/>
@@ -58,6 +60,11 @@
 			<div class="main-page">
 				<img src="/assets/images/instagram.png" width="150" height="auto"/>
 				<p>Instagram Pants</p>
+				<p>$15.00</p>
+			</div>
+			<div class="main-page">
+				<img src="/assets/images/kevinAvatar.png" width="150" height="auto"/>
+				<p>kevinAvatar Dress</p>
 				<p>$15.00</p>
 			</div>
 		</div>
