--- a/public_html/men/index.html
+++ b/public_html/men/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
         <script src="/assets/js/templates.js"></script>
         <script src="/assets/js/cart.js"></script>
-        <sciprt src="/assets/js/products.json"></sciprt>
+        <script src="/assets/js/products.js"></script>
         <script>
         /**
          * cart object, initalized as an empty object
@@ -27,18 +27,27 @@
             cart = Cart;
             // get cart from cookies
             cart.get();
+
+
+            // load products
+            var product = getProductOuter("men","bottoms");
+            document.getElementById("product").innerHTML = getProductOuter("men","bottoms");
+
+
+
+
         }
         </script>
 
         <!-- edit the title -->
         <title>T H O R N E & S P I N D L E | Mens</title>
 
+
     </head>
     <body onLoad="onLoad()">
         <div class="template" include="/templates/header.html"></div>
         
         <div class="row">
-
             <!-- write stuff in here -->
             <!-- also remember to change the title to your page -->
 
@@ -62,11 +71,6 @@
 			</div>
 		</div>
 
-
-            <!-- end write stuff here -->
-
-
-        </div>
 
         <div class="template" include="/templates/footer.html"></div>
 
