--- a/public_html/men/tops/index.html
+++ b/public_html/men/tops/index.html
@@ -7,7 +7,9 @@
         <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
         <script src="/assets/js/templates.js"></script>
         <script src="/assets/js/cart.js"></script>
-        <sciprt src="/assets/js/products.json"></sciprt>
+
+        <script src="/assets/js/products.js"></script>
+
         <script>
         /**
          * cart object, initalized as an empty object
@@ -27,18 +29,28 @@
             cart = Cart;
             // get cart from cookies
             cart.get();
+
+            // load products
+
+            var bottomsList = getCategoryArray("men", "tops");
+            console.log(bottomsList);
+
+            var finalHTML = displayProjectListing(bottomsList);
+            document.getElementById("productList").innerHTML = finalHTML;
+
+
         }
         </script>
 
         <!-- edit the title -->
         <title>T H O R N E & S P I N D L E | Mens's Tops</title>
 
+
     </head>
     <body onLoad="onLoad()">
         <div class="template" include="/templates/header.html"></div>
         
         <div class="row">
-
             <!-- write stuff in here -->
             <!-- also remember to change the title to your page -->
 
@@ -60,14 +72,10 @@
 			</div>
 		</div>
 
+            <div id="productList">The product list goes here</div>
 
-            <!-- end write stuff here -->
-
-
-        </div>
 
         <div class="template" include="/templates/footer.html"></div>
 
-        <!--<div class="template" include="/templates/footer.html"></div>-->
     </body>
 </html>
