dynamic product listing. NOTE: fixing formatting (3 column display) for product listing still needed

--- a/public_html/men/bottoms/index.html
+++ b/public_html/men/bottoms/index.html
@@ -30,27 +30,13 @@
 
             // load products
 
-            //var product = getProduct("men","bottoms", "pendleton-davis-chinos");
-            // var bottoms = getProductOuter("men","bottoms");
-            // var bottomsList = [];
-
-            // for (var property in bottoms) {
-            // 	console.log(bottoms[property]);
-            // 	bottomsList.push(bottoms[property]);
-            // }
-
             var bottomsList = getCategoryArray("men", "bottoms");
             console.log(bottomsList);
 
             var finalHTML = displayProjectListing(bottomsList);
             document.getElementById("productList").innerHTML = finalHTML;
 
-            //console.log(product);
-            //document.getElementById("product").innerHTML = product.name;
-
-            // var list = [];
-
-            // for
+        }
 
         </script>
 
@@ -73,14 +59,11 @@
 				<a href="/men/bottoms">
 					<h4 style="color: #5E9DC8">Bottoms</h4> </a>
 			</div>
-			<div class="main-page">
+<!-- 			<div class="main-page">
 				<img src="/assets/images/instagram.png" width="150" height="auto"/>
 				<p>Instagram Pants</p>
 				<p>$15.00</p>
-			</div>
-			<div class="main-page">
-				<!-- next row here -->
-			</div>
+			</div> -->
 		</div>
 
 
