added homepage skeleton

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -42,10 +42,32 @@
             <!-- write stuff in here -->
             <!-- also remember to change the title to your page -->
 
-
 			<div class="content">
 				<img class="splash" src="assets/images/pic.jpg" width="700" height="auto" align="middle"/>
 			</div>
+			<h2>New Releases for Women</h2>
+				<div class="main-page">
+					<img src="/assets/images/kevinAvatar.png" width="150" height="auto"/>
+					<p>kevinAvatar Dress</p>
+					<p>$15.00</p>
+				</div>
+				<div class="main-page">
+					<img src="/assets/images/instagram.png" width="150" height="auto"/>
+					<p>Instagram Pants</p>
+					<p>$15.00</p>
+				</div>
+			<div class="releases"> </div>
+			
+			<h2> New Releases for Men</h2>
+				<div class="main-page">
+					<img src="/assets/images/instagram.png" width="150" height="auto"/>
+					<p>Instagram Pants</p>
+					<p>$15.00</p>
+				</div>
+			
+			
+			
+			
 
 
             <!-- end write stuff here -->
