--- a/public_html/men/bottoms/pendleton-davis-chinos/index.html
+++ b/public_html/men/bottoms/pendleton-davis-chinos/index.html
@@ -47,7 +47,7 @@
         <div class="template" include="/templates/header.html"></div>
         
         <div class="row">
-            <div id="productDisplay">The product list goes here</div>
+            <div id="productDisplay"></div>
 
             <!-- write stuff in here -->
             <!-- also remember to change the title to your page -->
