--- a/public_html/product-layout-template.html
+++ b/public_html/product-layout-template.html
@@ -16,18 +16,35 @@
          */
         var cart = {};
 
+/**
+        * addItems
+        * fires when onclick occurs for the button "Add Items"
+        */
+        function addItems(gender, category, item) {
+            
+            var input = document.getElementById("do-something").value;
+            // todo find qty
+            cart.add(gender, category, item, input);
+            var element = document.getElementById("cart-qty");
+            element.innerHTML = cart.getCount();
+        }
         /**
          * onLoad()
          * fires when body is loaded
          */
         function onLoad() {
             // load templates
-            templates();
-
+            
             // load cart
             cart = Cart;
             // get cart from cookies
             cart.get();
+            //cart.add("men","bottoms","pendleton-compass-5-pocket-pants",5);
+            templates(function() {
+                var element = document.getElementById("cart-qty");
+                element.innerHTML = cart.getCount();
+            });
+
         }
         </script>
 
@@ -57,11 +74,10 @@
 				<p>Product description here</p>
 				<p>Price: $15.00</p>
 				<br>
-				<form>
 					Add To Cart<br>
-					<input class="mailinglist-input" type="number" name="do-something" value="1"/>
+					<input class="mailinglist-input" type="number" id="do-something" value="1"/>
 					<button class="mailinglist-subscribe-button">Add To Cart</button>
-				</form>
+                    <button onclick="addItems('men', 'bottoms', 'pendleton-davis-chinos')">Add Items</button>
 			</div>
 
             <!-- end write stuff here -->
