--- a/public_html/cart/index.html
+++ b/public_html/cart/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
         <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,600,400italic' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
         <script src="/assets/js/templates.js"></script>
         <script src="/assets/js/cart.js"></script>
@@ -81,15 +81,16 @@
                     <img src="/assets/images/products/men/bottoms/compass5PocketPantsBack.jpg" />
                 </div>
                 <div class="cart-description">
-                    <span class="product-attr"><span class="">name:</span> asdffsfsf</span>
-                    <span class="product-attr">Penditelkjas</span>
+                    <span class="product-attr product-name">asdffsfsf</span>
+                    <span class="product-attr product-brand">Penditelkjas</span>
                     <span class="product-attr">$34.22</span>
-                    <span class="product-attr">1</span>
-                    <p>asdfasdf</p>
-                    <span class="product-attr">update | remove</span>
+                    <span class="product-attr">qty: 1</span>
+                    <button class="btn">remove</button>
                 </div>
             </div>
         </div>
+
+        <div id="cart-contents"></div>
 
         <div class="template" include="/templates/footer.html"></div>
 
