--- a/public_html/template.html
+++ b/public_html/template.html
@@ -33,13 +33,16 @@
          * fires when body is loaded
          */
         function onLoad() {
-            // load templates
-            
+
             // load cart
             cart = Cart;
             cart.init(products);
             // load cart from cookies
             cart.load();
+
+            /**
+             * template, passes anonymous function to update cart quantity
+             */
             templates(function() {
                 var element = document.getElementById("cart-qty");
                 element.innerHTML = cart.getCount();
