--- a/public_html/men/bottoms/pendleton-davis-chinos/index.html
+++ b/public_html/men/bottoms/pendleton-davis-chinos/index.html
@@ -21,15 +21,14 @@
          * fires when body is loaded
          */
         function onLoad() {
-            // load templates
-            templates();
-
-            // load cart
             cart = Cart;
-            // get cart from cookies
-            cart.get();
+            cart.init(products);
+            cart.load();
+            templates(function() {
+                var element = document.getElementById("cart-qty");
+                element.innerHTML = cart.getCount();
+            });
 
-            // load products
 
             var clothingInfo = getItemInformation("men", "bottoms", "pendleton-davis-chinos");
 
