--- a/public_html/women/bottoms/index.html
+++ b/public_html/women/bottoms/index.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
         <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
         <script src="/assets/js/templates.js"></script>
         <script src="/assets/js/cart.js"></script>
-        <sciprt src="/assets/js/products.json"></sciprt>
+        <script src="/assets/js/products.js"></script>
         <script>
         /**
          * cart object, initalized as an empty object
@@ -20,59 +21,45 @@
          * fires when body is loaded
          */
         function onLoad() {
-            // load templates
-            templates();
-
-            // load cart
             cart = Cart;
-            // get cart from cookies
-            cart.get();
+            cart.init(products);
+            cart.load();
+            templates(function() {
+                var element = document.getElementById("cart-qty");
+                element.innerHTML = cart.getCount();
+            });
+
+            var bottomsList = getCategoryArray("women", "bottoms");
+
+            var finalHTML = displayProjectListing(bottomsList);
+            document.getElementById("productList").innerHTML = finalHTML;
+
         }
+
         </script>
 
-        <!-- edit the title -->
-        <title>T H O R N E & S P I N D L E | Mens</title>
+        <title>T H O R N E & S P I N D L E | Mens's Bottoms</title>
 
     </head>
     <body onLoad="onLoad()">
         <div class="template" include="/templates/header.html"></div>
         
         <div class="row">
-
-            <!-- write stuff in here -->
-            <!-- also remember to change the title to your page -->
-
-			<div class="sidebar">
-			
-				<a href="/women"> <h1>Women</h1> </a>
-				<a href="/women/tops">
-					<h4>Tops</h4> </a>
-				<a href="/women/bottoms">
-					<h4 style="color: #5E9DC8">Bottoms</h4> </a>
-				<a href="/women/dresses">
-					<h4>Dresses</h4> </a>
-			</div>
-			<div class="main-page">
-				<img src="/assets/images/instagram.png" width="150" height="auto"/>
-				<p>Instagram Pants</p>
-				<p>$15.00</p>
-			</div>
-			<div class="main-page">
-				<!-- Stuff here -->
-			</div>
-			<div class="main-page">
-				<!-- Stuff here -->
-			</div>
-		</div>
-
-
-            <!-- end write stuff here -->
-
-
+            <div class="sidebar">          
+                <a href="/women"> <h1 style="color: #5E9DC8">Women</h1> </a>
+                <a href="/women/tops">
+                    <h4>Tops</h4> </a>
+                <a href="/women/bottoms">
+                    <h4>Bottoms</h4> </a>
+                <a href="/women/dresses">
+                    <h4>Dresses</h4> </a>
+            </div>
+                <div id="productList">The product list goes here</div>
+            
         </div>
 
         <div class="template" include="/templates/footer.html"></div>
 
-        <!--<div class="template" include="/templates/footer.html"></div>-->
     </body>
 </html>
+
